Added smoothe scroll, revised HTML

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Strata by HTML5 UP</title>
+    <title>Mac Fitton - Web Developer</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -27,7 +27,7 @@
           ><img src="./images/me_blue.jpeg" alt=""
         /></a>
         <h1>
-          <strong>I am Marcello</strong>, a self-taught fullstack<br />
+          <strong>I am Mac</strong>, a self-taught fullstack<br />
           web developer based in Southern California<br />
         </h1>
       </div>
@@ -125,7 +125,7 @@
         </p>
         <div class="row">
           <div class="col-8 col-12-small">
-            <form method="post">
+            <form id="contact-form" method="post">
               <div class="row gtr-uniform gtr-50">
                 <div class="col-6 col-12-xsmall">
                   <input type="text" name="name" id="name" placeholder="Name" />
@@ -478,28 +478,20 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
       <div class="inner">
         <ul class="icons">
           <li>
-            <a href="#" class="icon brands fa-twitter"
-              ><span class="label">Twitter</span></a
-            >
-          </li>
-          <li>
-            <a href="#" class="icon brands fa-github"
+            <a
+              href="https://github.com/angelplusultra"
+              class="icon brands fa-github"
               ><span class="label">Github</span></a
             >
           </li>
           <li>
-            <a href="#" class="icon brands fa-dribbble"
-              ><span class="label">Dribbble</span></a
-            >
-          </li>
-          <li>
-            <a href="#" class="icon solid fa-envelope"
+            <a href="#contact-form" class="icon solid fa-envelope"
               ><span class="label">Email</span></a
             >
           </li>
         </ul>
         <ul class="copyright">
-          <li>&copy; Untitled</li>
+          <li>&copy; Halcyon Sky</li>
           <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
         </ul>
       </div>
