Added tech lists

--- a/index.html
+++ b/index.html
@@ -57,14 +57,25 @@
         <h2>Recent Work</h2>
         <div class="row">
           <article class="col-6 col-12-xsmall work-item">
-            <a href="images/CalmShrub_thumbnail.gif" class="image fit thumb"
-              ><img src="images/templix_demo_02.gif" alt=""
+            <a href="images/templix_demo_02.gif" class="image fit thumb"
+              ><img src="images/resized_templix.gif" alt=""
             /></a>
             <h3>Templix</h3>
             <p>
               a project template management GUI tool for developers, made with
               Electron
             </p>
+            <div class="tech-section">
+              <h3>Tech</h3>
+              <ul class="tech-list">
+                <li>Vite</li>
+                <li>TypeScript</li>
+                <li>Electron</li>
+                <li>NodeJS</li>
+                <li>ReactJS</li>
+                <li>Tailwind CSS</li>
+              </ul>
+            </div>
             <div class="links">
               <a class="visit" href="https://github.com/angelplusultra/templix"
                 >Visit</a
@@ -80,6 +91,20 @@
             /></a>
             <h3>Calm Shrub Art</h3>
             <p>eCommerce store for the Michigan based artist, Calm Shrub.</p>
+            <div class="tech-section">
+              <h3>Tech</h3>
+              <ul class="tech-list">
+                <li>Vite</li>
+                <li>TypeScript</li>
+                <li>NodeJS</li>
+                <li>Strapi Headless CMS</li>
+                <li>PostgreSQL</li>
+                <li>Stripe</li>
+                <li>ReactJS</li>
+                <li>Redux</li>
+                <li>Tailwind CSS</li>
+              </ul>
+            </div>
             <div class="links">
               <a class="visit" href="https://www.npmjs.com/package/gigawatch"
                 >Visit</a
@@ -95,6 +120,15 @@
             /></a>
             <h3>Gigawatch</h3>
             <p>Watch mode devtools for JS, TS, Python and Lua developers</p>
+            <div class="tech-section">
+              <h3>Tech</h3>
+              <ul class="tech-list">
+                <li>JavaScript</li>
+                <li>NodeJS</li>
+                <li>Nodemon</li>
+                <li>NPM</li>
+              </ul>
+            </div>
             <div class="links">
               <a class="visit" href="https://www.npmjs.com/package/gigawatch"
                 >Visit</a
@@ -108,13 +142,20 @@
             <a href="images/fulls/02.jpg" class="image fit thumb"
               ><img src="images/thumbs/02.jpg" alt=""
             /></a>
-            <h3>Evnt</h3>
-            <p>Watch mode devtools for JS, TS, Python and Lua developers</p>
+            <h3>Heart of House (Under Contruction)</h3>
+            <p>Browser based POS system</p>
+
+            <div class="tech-section">
+              <h3>Tech</h3>
+              <ul class="tech-list">
+                <li>Vite</li>
+                <li>TypeScript</li>
+                <li>ReactJS</li>
+                <li>Tailwind CSS</li>
+              </ul>
+            </div>
           </article>
         </div>
-        <ul class="actions">
-          <li><a href="#" class="button">Full Portfolio</a></li>
-        </ul>
       </section>
 
       <!-- Three -->
