Put in icon and link for LinkedIn | Revised portfolio projects | removed unneeded images

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <h2>Recent Work</h2>
         <div class="row">
           <article class="col-6 col-12-xsmall work-item">
-              <img class="image fit thumb" src="images/Beyond Reproach_logo.jpg" alt=""
+              <img class="image fit thumb" src="images/beyondreproach_thumbnail_resized.png" alt=""
             <h3>Beyond Reproach</h3>
             <p>
               Custom web server for Miami based premium meal-prep company,
@@ -168,40 +168,9 @@
             </div>
           </article>
           <article class="col-6 col-12-xsmall work-item">
-              <img class="image fit thumb" src="images/Gigawatch_thumbnail.gif" alt=""
-            <h3>Gigawatch</h3>
-            <p>Watch mode devtools for JS, TS, Python and Lua developers</p>
-            <div class="tech-section">
-              <h3>Tech</h3>
-              <ul class="tech-list">
-                <li>JavaScript</li>
-                <li>NodeJS</li>
-                <li>Nodemon</li>
-                <li>NPM</li>
-              </ul>
-            </div>
-            <div class="links">
-              <a
-                target="_blank"
-                class="visit visit-button"
-                href="https://www.npmjs.com/package/gigawatch"
-                >Visit</a
-              >
-              <a
-                target="_blank"
-                class="gh"
-                href="https://github.com/angelplusultra/gigawatch"
-              >
-                <i class="fa-brands fa-github"></i>
-              </a>
-            </div>
-          </article>
-          <article class="col-6 col-12-xsmall work-item">
-            <a href="images/fulls/02.jpg" class="image fit thumb"
-              ><img src="images/thumbs/02.jpg" alt=""
-            /></a>
-            <h3>Heart of House (Under Contruction)</h3>
-            <p>Browser based POS system</p>
+              <img class="image fit thumb" src="images/heartofhouse_thumbnail_resized.png"/>
+            <h3>Heart of House</h3>
+            <p>A "smart" browser based POS system powered by AI</p>
 
             <div class="tech-section">
               <h3>Tech</h3>
@@ -210,6 +179,9 @@
                 <li>TypeScript</li>
                 <li>ReactJS</li>
                 <li>Tailwind CSS</li>
+                <li>Open AI</li>
+                <li>NodeJS</li>
+                <li>ExpressJS</li>
               </ul>
             </div>
           </article>
@@ -258,6 +230,13 @@
     <footer id="footer">
       <div class="inner">
         <ul class="icons">
+          <li>
+            <a
+              href="https://www.linkedin.com/in/macfittondev/"
+              class="icon brands fa-linkedin"
+              ><span class="label">LinkedIn</span></a
+            >
+          </li>
           <li>
             <a
               href="https://github.com/angelplusultra"
