Resume update, format update

--- a/index.html
+++ b/index.html
@@ -5,204 +5,264 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-
-<head>
+  <head>
     <title>Mac Fitton - Web Developer</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/styles.css" />
-    <script src="https://kit.fontawesome.com/44f1e971cb.js" crossorigin="anonymous"></script>
-</head>
+    <script
+      src="https://kit.fontawesome.com/44f1e971cb.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<body class="is-preload">
+  <body class="is-preload">
     <!-- Header -->
     <header id="header">
-        <div class="inner">
-            <a href="#" class="image avatar"><img src="./images/me_blue.jpeg" alt="" /></a>
-            <h1>
-                <strong>I am Mac</strong>, a self-taught fullstack<br />
-                developer based in Southern California<br />
-            </h1>
-        </div>
+      <div class="inner">
+        <a href="#" class="image avatar"
+          ><img src="./images/me_blue.jpeg" alt=""
+        /></a>
+        <h1>
+          <strong>I am Mac</strong>, a Full Stack<br />
+          Developer based in Southern California<br />
+        </h1>
+      </div>
     </header>
 
     <!-- Main -->
     <div id="main">
-        <!-- One -->
-        <section id="one">
-            <header class="major">
-                <div style="
+      <!-- One -->
+      <section id="one">
+        <header class="major">
+          <div
+            style="
               display: flex;
               align-items: center;
               justify-content: space-between;
               margin-bottom: 20px;
-            ">
-                    <h2 style="margin: 0">Mac Fitton</h2>
-                    <a class="visit-button" target="_blank
-              " style="font-size: small" href="./assets/my_resume.pdf">View Resume</a>
-                </div>
-            </header>
-            <h4>About Me</h4>
-            <p>
-                Hello, I'm Mac Fitton, a self-taught full-stack web developer with a
-                passion for crafting elegant digital experiences. My journey into the
-                world of web development began as a personal curiosity and quickly
-                evolved into a rewarding career. With a primary focus on modern
-                technologies such as TypeScript, React, Node.js, Express.js, Strapi,
-                MongoDB, and SQL, I've had the privilege of creating dynamic and
-                efficient web applications that bring ideas to life.
-            </p>
-        </section>
+            "
+          >
+            <h2 style="margin: 0">Mac Fitton</h2>
+            <a
+              class="visit-button"
+              target="_blank
+              "
+              style="font-size: small"
+              href="./assets/my_resume.pdf"
+              >View Resume</a
+            >
+          </div>
+        </header>
+        <h4>About Me</h4>
+        <p>
+          Hello, I'm Mac Fitton, a Full Stack Developer with a passion for
+          crafting elegant digital experiences. My journey into the world of web
+          development began as a personal curiosity and quickly evolved into a
+          rewarding career. With a primary focus on modern technologies such as
+          TypeScript, React, Node.js, Express.js, Strapi, and SQL, I've had the
+          privilege of creating dynamic and efficient web applications that
+          bring ideas to life.
+        </p>
+      </section>
 
-        <!-- Two -->
-        <section id="two">
-            <h2>Recent Work</h2>
-            <div class="row">
-                <article class="col-6 col-12-xsmall work-item">
-                    <img class="image fit thumb" src="images/beyondreproach_thumbnail_resized.png" alt="" <h3>Beyond
-                    Reproach</h3>
-                    <p>
-                        Custom web server for Miami based premium meal-prep company,
-                        Beyond Reproach
-                    </p>
-                    <div class="tech-section">
-                        <h3>Tech</h3>
-                        <ul class="tech-list">
-                            <li>TypeScript</li>
-                            <li>NodeJS</li>
-                            <li>KoaJS</li>
-                            <li>Strapi CMS</li>
-                            <li>Stripe</li>
-                            <li>Twilio</li>
-                            <li>ShipDay</li>
-                            <li>Yup</li>
-                            <li>PostgreSQL</li>
-                        </ul>
-                    </div>
-                    <div class="links"></div>
-                </article>
-                <article class="col-6 col-12-xsmall work-item">
-                    <img class="image fit thumb" src="images/resized_templix.gif" alt="" <h3>Templix</h3>
-                    <p>
-                        a project template management GUI tool for developers, made with
-                        Electron
-                    </p>
-                    <div class="tech-section">
-                        <h3>Tech</h3>
-                        <ul class="tech-list">
-                            <li>Vite</li>
-                            <li>TypeScript</li>
-                            <li>Electron</li>
-                            <li>NodeJS</li>
-                            <li>ReactJS</li>
-                            <li>React Hot Toast</li>
-                            <li>React Icons</li>
-                            <li>Tailwind CSS</li>
-                            <li>Daisy UI</li>
-                        </ul>
-                    </div>
-                    <div class="links">
-                        <a target="_blank" class="visit visit-button"
-                            href="https://github.com/angelplusultra/templix">Visit</a>
-                        <a target="_blank" class="gh" href="https://github.com/angelplusultra/templix">
-                            <i class="fa-brands fa-github"></i>
-                        </a>
-                    </div>
-                </article>
-                <article class="col-6 col-12-xsmall work-item">
-                    <img class="image fit thumb" src="images/CalmShrub_thumbnail.gif" alt="" <h3>Calm Shrub Art</h3>
-                    <p>eCommerce store for the Michigan based artist, Calm Shrub.</p>
-                    <div class="tech-section">
-                        <h3>Tech</h3>
-                        <ul class="tech-list">
-                            <li>Vite</li>
-                            <li>TypeScript</li>
-                            <li>NodeJS</li>
-                            <li>Strapi Headless CMS</li>
-                            <li>PostgreSQL</li>
-                            <li>Stripe</li>
-                            <li>ReactJS</li>
-                            <li>Redux</li>
-                            <li>Tailwind CSS</li>
-                        </ul>
-                    </div>
-                    <div class="links">
-                        <a class="visit visit-button" target="_blank" href="https://calmshrub.com">Visit</a>
-                        <a target="_blank" class="gh" href="https://github.com/angelplusultra/calm-shrub-website">
-                            <i class="fa-brands fa-github"></i>
-                        </a>
-                    </div>
-                </article>
-                <article class="col-6 col-12-xsmall work-item">
-                    <img class="image fit thumb" src="images/heartofhouse_thumbnail_resized.png" />
-                    <h3>Heart of House</h3>
-                    <p>A "smart" browser based POS system powered by AI</p>
+      <!-- Two -->
+      <section id="two">
+        <h2>Work Experience</h2>
+        <div class="row">
+          <article class="col-6 col-12-xsmall work-item">
+            <img
+              class="image fit thumb"
+              src="images/heartofhouse_thumbnail_resized.png"
+            />
+            <h3>Heart of House</h3>
+            <p>Smart Restaraunt technology solutions</p>
 
-                    <div class="tech-section">
-                        <h3>Tech</h3>
-                        <ul class="tech-list">
-                            <li>Vite</li>
-                            <li>TypeScript</li>
-                            <li>React.js</li>
-                            <li>Tailwind CSS</li>
-                            <li>Open AI</li>
-                            <li>Node.js</li>
-                            <li>Express.js</li>
-                        </ul>
-                    </div>
-                </article>
+            <div class="tech-section">
+              <h3>Primary Tech</h3>
+              <ul class="tech-list">
+                <li>TypeScript</li>
+                <li>Node.js</li>
+                <li>React.js</li>
+                <li>Strapi CMS</li>
+              </ul>
             </div>
-        </section>
 
-        <!-- Three -->
-        <section id="three">
-            <h2>Get In Touch</h2>
-            <p>
-                Fill out the form below and I'll get back to you as soon as possible!
-            </p>
-            <div class="row">
-                <div class="col-8 col-12-small">
-                    <form id="contact-form" method="post">
-                        <div class="row gtr-uniform gtr-50">
-                            <div class="col-6 col-12-xsmall">
-                                <input type="text" name="name" id="name" placeholder="Name" />
-                            </div>
-                            <div class="col-6 col-12-xsmall">
-                                <input type="email" name="email" id="email" placeholder="Email" />
-                            </div>
-                            <div class="col-12">
-                                <textarea name="message" id="message" placeholder="Message" rows="4"></textarea>
-                            </div>
-                        </div>
-                    </form>
-                    <ul class="actions">
-                        <li><input id="submit" type="submit" value="Send Message" /></li>
-                    </ul>
-                </div>
+            <div class="links">
+              <a
+                target="_blank"
+                class="visit visit-button"
+                href="https://heartofhouse.io"
+                >Visit</a
+              >
             </div>
-        </section>
+          </article>
+          <article class="col-6 col-12-xsmall work-item">
+            <img
+              class="image fit thumb"
+              src="images/beyondreproach_thumbnail_resized.png"
+              alt=""
+            />
+            <h3>BeyondReproach</h3>
+            <p>Miami based luxury meal-prep company</p>
+            <div class="tech-section">
+              <h3>Primary Tech</h3>
+              <ul class="tech-list">
+                <li>TypeScript</li>
+                <li>Node.js</li>
+                <li>React.js</li>
+                <li>Strapi CMS</li>
+              </ul>
+            </div>
+            <div class="links">
+              <a
+                target="_blank"
+                class="visit visit-button"
+                href="https://beyondreproachmeals.com"
+                >Visit</a
+              >
+            </div>
+          </article>
+
+          <article class="col-6 col-12-xsmall work-item">
+            <img
+              class="image fit thumb"
+              src="images/CalmShrub_thumbnail.gif"
+              alt=""
+            />
+            <h3>Calm Shrub Art</h3>
+            <p>Michigan based boutique arts & crafts retailer</p>
+            <div class="tech-section">
+              <h3>Tech</h3>
+              <ul class="tech-list">
+                <li>TypeScript</li>
+                <li>React.js</li>
+                <li>Node.js</li>
+                <li>Strapi CMS</li>
+              </ul>
+            </div>
+            <div class="links">
+              <a
+                class="visit visit-button"
+                target="_blank"
+                href="https://calmshrubart.com"
+                >Visit</a
+              >
+              <a
+                target="_blank"
+                class="gh"
+                href="https://github.com/angelplusultra/calm-shrub-website"
+              >
+                <i class="fa-brands fa-github"></i>
+              </a>
+            </div>
+          </article>
+          <article class="col-6 col-12-xsmall work-item">
+            <img
+              class="image fit thumb"
+              src="images/resized_templix.gif"
+              alt=""
+            />
+            <h3>Templix</h3>
+            <p>a project template management GUI tool for developers</p>
+            <div class="tech-section">
+              <h3>Primary Tech</h3>
+              <ul class="tech-list">
+                <li>TypeScript</li>
+                <li>Electron</li>
+                <li>Node.js</li>
+                <li>React.js</li>
+              </ul>
+            </div>
+            <div class="links">
+              <a
+                target="_blank"
+                class="visit visit-button"
+                href="https://github.com/angelplusultra/templix"
+                >Visit</a
+              >
+              <a
+                target="_blank"
+                class="gh"
+                href="https://github.com/angelplusultra/templix"
+              >
+                <i class="fa-brands fa-github"></i>
+              </a>
+            </div>
+          </article>
+        </div>
+      </section>
+
+      <!-- Three -->
+      <section id="three">
+        <h2>Get In Touch</h2>
+        <p>
+          Fill out the form below and I'll get back to you as soon as possible!
+        </p>
+        <div class="row">
+          <div class="col-8 col-12-small">
+            <form id="contact-form" method="post">
+              <div class="row gtr-uniform gtr-50">
+                <div class="col-6 col-12-xsmall">
+                  <input type="text" name="name" id="name" placeholder="Name" />
+                </div>
+                <div class="col-6 col-12-xsmall">
+                  <input
+                    type="email"
+                    name="email"
+                    id="email"
+                    placeholder="Email"
+                  />
+                </div>
+                <div class="col-12">
+                  <textarea
+                    name="message"
+                    id="message"
+                    placeholder="Message"
+                    rows="4"
+                  ></textarea>
+                </div>
+              </div>
+            </form>
+            <ul class="actions">
+              <li><input id="submit" type="submit" value="Send Message" /></li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </div>
 
     <footer id="footer">
-        <div class="inner">
-            <ul class="icons">
-                <li>
-                    <a href="https://www.linkedin.com/in/macfittondev/" class="icon brands fa-linkedin"><span
-                            class="label">LinkedIn</span></a>
-                </li>
-                <li>
-                    <a href="https://github.com/angelplusultra" class="icon brands fa-github"><span
-                            class="label">Github</span></a>
-                </li>
-                <li>
-                    <a href="#contact-form" class="icon solid fa-envelope"><span class="label">Email</span></a>
-                </li>
-            </ul>
-            <ul class="copyright">
-                <li>&copy; Halcyon Sky Consulting</li>
-            </ul>
-        </div>
+      <div class="inner">
+        <ul class="icons">
+          <li>
+            <a
+              href="https://www.linkedin.com/in/macfittondev/"
+              class="icon brands fa-linkedin"
+              ><span class="label">LinkedIn</span></a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/angelplusultra"
+              class="icon brands fa-github"
+              ><span class="label">Github</span></a
+            >
+          </li>
+          <li>
+            <a href="#contact-form" class="icon solid fa-envelope"
+              ><span class="label">Email</span></a
+            >
+          </li>
+        </ul>
+        <ul class="copyright">
+          <li>&copy; Halcyon Sky Consulting</li>
+        </ul>
+      </div>
     </footer>
 
     <!-- Scripts -->
@@ -212,13 +272,15 @@
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
+    ></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <script type="module" src="./js/main.js"></script>
     <script>
-        document.querySelector(".image").removeEventListener("click");
+      document.querySelector(".image").removeEventListener("click");
     </script>
-</body>
-
+  </body>
 </html>
